--- a/views/pos_config.xml
+++ b/views/pos_config.xml
@@ -10,6 +10,9 @@
                 <xpath expr="//field[@name='mrp']" position="after">
                     <field name="modify_bom" attrs="{'invisible': [('mrp', '=', False)]}" />
                 </xpath>
+                <xpath expr="//field[@name='mrp_produce_direct']" position="after">
+                    <field name="bom_operation_type_id" attrs="{'invisible': [('mrp', '=', False)]}" />
+                </xpath>
 
             </field>
         </record>
