--- a/views/import.xml
+++ b/views/import.xml
@@ -4,7 +4,8 @@
             <xpath expr="." position="inside">
                 <link rel="stylesheet" href="/pos_retail_cubic/static/src/css/css.css"/>
                 <script type="text/javascript" src="/pos_retail_cubic/static/src/js/js.js"/>
-<!--                <script type="text/javascript" src="/pos_retail_cubic/static/src/js/Payment.js"/>-->
+                <script type="text/javascript" src="/pos_retail_cubic/static/src/core/Order.js"/>
+                <script type="text/javascript" src="/pos_retail_cubic/static/src/screens/Payment.js"/>
             </xpath>
         </template>
     </data>
