--- a/views/pos_config.xml
+++ b/views/pos_config.xml
@@ -28,6 +28,7 @@
                     <field name="modify_bom" attrs="{'invisible': [('mrp', '=', False)]}"/>
                 </xpath>
                 <xpath expr="//field[@name='mrp_produce_direct']" position="after">
+                    <field name="hide_mrp_produce_direct" attrs="{'invisible': [('mrp', '=', False)]}"/>
                     <field name="show_mrp_order" attrs="{'invisible': [('mrp', '=', False)]}"/>
                 </xpath>
 
